# eona-mcp

./: .env.example  .gitignore  AGPL_NETWORK_SOURCE_NOTICE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
agent/: EONA-MCP-Fetch-Photos.md  EONA-MCP-Query-v1.md  EONA-Query-v1.md
bootstrap/: bootstrap.sh
contracts/: eona-cli-bootstrap.json  eona-cli-dependency.json
scripts/: publish_eona_mcp_ghcr.sh
src/eona_mcp/: __init__.py  cli.py  config.py  http_server.py  server.py  session_cli.py  start_project.py  startup.py  tools.py
